[tool.poetry]
name = "detectadvprompt"
version = "0.1.0"
description = ""
authors = ["Zhengmian Hu <huzhengmian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.20.0"
scipy = "^1.11.3"
# due to a bug: https://stackoverflow.com/a/76647180
# torch = "^2.1.0"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
transformers = "^4.34.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
